--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2021"
 [dependencies]
 enum-map = "2.7.1"
 criterion = "0.5.1"
+bitflags = "2.4.1"
 
 [dev-dependencies]
 criterion = { version = "0.5.1", features = ["html_reports"] }
