--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,8 @@ edition = "2021"
 enum-map = "2.7.1"
 criterion = "0.5.1"
 bitflags = "2.4.1"
+serde = "1.0.192"
+serde_json = "1.0"
 
 [dev-dependencies]
 criterion = { version = "0.5.1", features = ["html_reports"] }
