--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,8 @@ criterion = "0.5.1"
 bitflags = "2.4.1"
 serde = "1.0.192"
 serde_json = "1.0"
+rand = "0.8.4"
+rand_chacha = "0.3.1"
 
 [dev-dependencies]
 criterion = { version = "0.5.1", features = ["html_reports"] }
